2019-06-06  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-view-this-url-new-session)
	(w3m--goto-url--handler-function, w3m-goto-url-new-session)
	(w3m-view-this-url-1): Partial merge of bb-upstream 6c42578b

2019-06-06  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-select-next-line, w3m-select-previous-line): New
	functions, to maintain column position when navigation buffer-selection
	pop-up.
	(w3m-select-buffer-mode-map, w3m-select-buffer-next-line): Use the new functions.
	(w3m-select-buffer-show-this-line): maintain column position.
	(w3m-select-buffer-next-line): Remove Xemacs support

2019-05-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	Bugfix ([emacs-w3m:13417])

	* w3m.el (w3m-search-name-anchor): Refactor; make the window positions
	sure to be set for the case where it runs in the background.
	(w3m-copy-buffer): Revert to the old function definition keeping the
	current arglist and its order; work for the background run suitably.

	Trivia:
	* w3m.el (w3m-view-this-url-new-session-in-background): Remove.
	(w3m--retrieve-and-render--handler-function):
	Make the "...has been retrieved" message sure to be shown for a while.
	(w3m-view-this-url-1): Always select the copied buffer.
	(w3m-view-this-url-new-session, w3m-goto-url-new-session):
	Don't show the progress message for the background run.
	(w3m--goto-url--handler-function):
	Show the "...has been retrieved" message when jumping to a name anchor
	in the background.

2019-05-27  Tatsuya Kinoshita  <tats@debian.org>

	* w3m-bookmark.el (w3m-bookmark-file-modtime): Chase links
	([emacs-w3m:13427]).

2019-05-27  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-copy-buffer): Bug fix for [emacs-w3m:13417], by
	duplicating internal code of function clone-buffer.

2019-05-19  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m--message): BUGFIX: Handling of sub-string "%29".

2019-05-19  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-session.el (w3m-session-select-merge): New feature, allows moving